fixed text inside 'pre' tag overflow

--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,7 @@
   src: local('Roboto Light'), local('Roboto-Light'),
     url('./fonts/roboto-v20-latin-300.woff2') format('woff2'),
     url('./fonts/roboto-v20-latin-300.woff') format('woff');
+  font-display: swap;
 }
 
 /* roboto-regular - latin */
@@ -18,6 +19,7 @@
   src: local('Roboto'), local('Roboto-Regular'),
     url('./fonts/roboto-v20-latin-regular.woff2') format('woff2'),
     url('./fonts/roboto-v20-latin-regular.woff') format('woff');
+  font-display: swap;
 }
 
 /* roboto-500 - latin */
@@ -28,6 +30,7 @@
   src: local('Roboto Medium'), local('Roboto-Medium'),
     url('./fonts/roboto-v20-latin-500.woff2') format('woff2'),
     url('./fonts/roboto-v20-latin-500.woff') format('woff');
+  font-display: swap;
 }
 
 /* roboto-700 - latin */
@@ -38,6 +41,7 @@
   src: local('Roboto Bold'), local('Roboto-Bold'),
     url('./fonts/roboto-v20-latin-700.woff2') format('woff2'),
     url('./fonts/roboto-v20-latin-700.woff') format('woff');
+  font-display: swap;
 }
 
 body {
@@ -48,6 +52,10 @@ body {
   -moz-osx-font-smoothing: grayscale;
   min-height: 100vh;
   min-height: -webkit-fill-available;
+}
+
+pre {
+  overflow: auto;
 }
 
 code {
